fix valign

--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -74,6 +74,10 @@ body {
     main{
 		min-height: calc(100vh - 228px);
 		#forum {
+			.vcenter {
+				display: flex;
+				align-items: center;
+			}
 			.alert{
 				padding:12px 16px;
 				color:white;
@@ -90,6 +94,11 @@ body {
 			h5 {
 				span {
 					border-bottom: solid 1px white;
+				}
+			}
+			@media (max-width: 1024px) {
+				h5 {
+					margin-left: 10px;
 				}
 			}
 		}
